runtime/pavex_macros/tests/from/fail/invalid_module_path.rs
use pavex_macros::from;

fn main() {
    let _ = from![123invalid::module];
}
